--- a/BACKEND/package.json
+++ b/BACKEND/package.json
@@ -9,6 +9,9 @@
   "author": "",
   "license": "ISC",
   "description": "",
+   "engines": {
+  "node": "20.14.0"
+},
   "dependencies": {
     "bcrypt": "^5.1.1",
     "cloudinary": "^2.2.0",
